--- a/content/posts/2019-02-09-test.md
+++ b/content/posts/2019-02-09-test.md
@@ -2,7 +2,7 @@
 template: post
 title: TEST
 slug: /posts/test
-draft: true
+draft: false
 date: 2019-02-09T11:37:19.964Z
 description: test
 category: Typography
